--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-dface==1.1.5
-numpy==1.22.2
-opencv_python==4.5.5.62
-Pillow==9.0.1
-scikit_learn==1.0.2
-timm==0.5.4
-torch==1.10.2
-torchvision==0.11.3
-tqdm==4.63.0
-gunicorn==21.2.0
+# Updated requirements.txt
+numpy==1.26.3        # Latest numpy compatible with Python 3.11
+scikit-learn==1.3.2  # Latest scikit-learn (supports Python 3.11)
+Cython==0.29.36      # Required by scikit-learn for compilation
+torch==2.0.1         # Latest PyTorch compatible with Python 3.11
+torchvision==0.15.2  # Matches torch 2.0.1
+Pillow==9.5.0        # Latest Pillow
+opencv-python==4.8.0.76  # Latest OpenCV
+timm==0.6.12  # Latest version compatible with Python 3.11  # Latest timm
+tqdm==4.65.0         # Latest tqdm
+gunicorn==21.2.0     # Keep as-is
