--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EXAMPLE_NAME=I9JU23NF394R6HH
-MODELS_DIR=C:\Users\Raghav\videofinal\weights
-CFG_FILE=C:\Users\Raghav\videofinal\config.json
+MODELS_DIR=weights
+CFG_FILE=config.json
 PORT=5000
